--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 html,
 body {
-	width: 80%;
-	height: 80%;
+	width: 100%;
+	height: 100%;
 	text-align: center;
 	background-color: lightsalmon;
 }
@@ -9,20 +9,14 @@ body {
 .container {
 	display: inline-flex;
 	flex-direction: row;
+	width: 80%;
+	height: 80%;
 }
 
 .img_container {
 	width: 100%;
 }
 
-.image1,
-.image2 {
-	max-width: 400px;
-	max-height: 400px;
-	text-align: center;
-	border: 1px;
-	padding: 10px;
-}
 
 button {
 	width: 88px;
@@ -31,7 +25,7 @@ button {
 }
 
 .drop_down {
-
+	margin:  80px 10px 0px;
 }
 
 .drop_down_contents {
