--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,18 @@ body {
 
 .img_container {
 	width: 100%;
+	height: 100%;
 }
 
+.cat_card {
+	width: 100%;
+}
+
+.cat_image {
+	width: 100%;
+	max-width: 1500px;
+	max-height: 1300px;
+}
 
 button {
 	width: 88px;
@@ -47,13 +57,5 @@ button {
 } 
 
 .drop_down_visibility {
-	display: none;
-}
-
-.img_container {
-	
-}
-
-.hidden {
 	display: none;
 }
