--- a/styles.css
+++ b/styles.css
@@ -9,37 +9,36 @@ body {
 .container {
 	display: inline-flex;
 	flex-direction: row;
-	width: 80%;
-	height: 80%;
-}
-
-.img_container {
 	width: 100%;
 	height: 100%;
 }
 
-.cat_card {
-	width: 100%;
+/* --------------------------- */
+/* --------------------------- */
+.controls {
+	margin:  30px 10px 30px;
+	width: 30%;
 }
 
-.cat_image {
-	width: 100%;
-	max-width: 1500px;
-	max-height: 1300px;
+/* --------------------------- */
+.list_controls {
+	height: 60%;
+	width: 80px;
+	margin: auto;
 }
 
-button {
+.drop_down_button,
+.admin_button,
+.submit_button,
+.cancel_button {
 	width: 88px;
 	border: 3px solid;
 	padding: 1px 6px;
 }
 
-.drop_down {
-	margin:  80px 10px 0px;
-}
-
 .drop_down_contents {
 	border: inset;
+	width: 80px;
 }
 
 .drop_down_contents p {
@@ -58,4 +57,37 @@ button {
 
 .drop_down_visibility {
 	display: none;
+}
+
+/* --------------------------- */
+.admin_mode {
+	height: 40%;
+	margin: auto;
+}
+
+.in_put {
+	width: 70%;
+}
+
+.admin_form {
+	visibility: hidden;
+}
+
+
+/* --------------------------- */
+/* --------------------------- */
+.img_container {
+	width: 70%;
+	height: 100%;
+	margin:  30px 10px 30px;
+}
+
+.cat_card {
+	width: 100%;
+}
+
+.cat_image {
+	width: 100%;
+	max-width: 1500px;
+	max-height: 1300px;
 }
